@@ -9,6 +9,7 @@ Revision 4.1.15a
   or pyasn1 Null (v1).
   Built-in GETNEXT/GETBULK apps now do not require user to track
   end-of-mib conditions anymore -- this is now done automatically.
+  (WARNING: possibly backward incompatible API change!)
 - CommandResponder API now supports async mode of operation.
 - SNMP exception values now exported from rfc1905 module, and made
   pretty printable.
@@ -25,6 +26,9 @@ Revision 4.1.15a
 - Void access control module implemented to let apps disabling [default] VACM.
 - Allow standard SNMP apps to choose access control method to use.
 - Twisted-based CommandResponder example added.
+- Fix/rework of Twisted GETNEXT/BULK CommandGenerator callback API to
+  make it simpler and uniform with other CommandGenerators
+  (WARNING: backward incompatible API change!)
 - Fix to SNMPv3 security module to store peer SNMP engine timeline
   only if taken from an authenticated message. Prior to this fix
   SNMP engine was not been protected from spoofing.
